--- a/clock.css
+++ b/clock.css
@@ -13,3 +13,9 @@ body {
 #color {
     color: white;
 }
+
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) { 
+
+}
